More tests were added

--- a/extra.css
+++ b/extra.css
@@ -1,3 +1,7 @@
-.block1, .block2 { font-size: 30pt; }
+.block1, .block2, .block3, .block4, .block5, .block6 { font-size: 30pt; }
 .block1 { border: 1px solid red; }
 .block2 { border: 1px solid blue; }
+.block3 { border: 1px solid green; }
+.block4 { border: 1px solid yellow; }
+.block5 { border: 1px solid magenta; }
+.block6 { border: 1px solid cyan; }
