--- a/extra.css
+++ b/extra.css
@@ -1,7 +1,8 @@
-.block1, .block2, .block3, .block4, .block5, .block6 { font-size: 30pt; }
+.block1, .block2, .block3, .block4, .block5, .block6, .block7 { font-size: 30pt; }
 .block1 { border: 1px solid red; }
 .block2 { border: 1px solid blue; }
 .block3 { border: 1px solid green; }
 .block4 { border: 1px solid yellow; }
 .block5 { border: 1px solid magenta; }
 .block6 { border: 1px solid cyan; }
+.block7 { border: 1px solid black; }
